force-app/main/default/objects/Career_Ready_Check__c/Career_Ready_Check__c.object-meta.xml
<CustomObject>
    <description>Created by BN
Geekwise Users 
Track Cohortian career readiness</description>
    <label>Career Ready Check</label>
    <nameField>
        <displayFormat>CRC-{0000}</displayFormat>
        <label>Career Ready Check ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Career Ready Checks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>