force-app/main/default/objects/Career_Ready_Check__c/fields/Analytical__c.field-meta.xml
<CustomField>
    <fullName>Analytical__c</fullName>
    <description>Created by BN
For Geekwise Users
To track Cohortian career readiness</description>
    <inlineHelpText>Problem solver
Makes informed decisions
Thorough 
Detail-oriented</inlineHelpText>
    <label>Analytical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Career_Ready_Scoring</valueSetName>
    </valueSet>
</CustomField>