force-app/main/default/objects/Career_Ready_Check__c/fields/Apprentice__c.field-meta.xml
<CustomField>
    <fullName>Apprentice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created by: JA
Purpose: Track Cohortian career readiness</description>
    <label>Apprentice</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Career Ready Checks</relationshipLabel>
    <relationshipName>Career_Ready_Checks1</relationshipName>
    <type>Lookup</type>
</CustomField>