force-app/main/default/objects/Career_Ready_Check__c/fields/Apprenticeship__c.field-meta.xml
<CustomField>
    <fullName>Apprenticeship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created by: JA
Purpose: Track which Apprenticeship the CRC is for</description>
    <label>Apprenticeship</label>
    <referenceTo>Apprenticeship__c</referenceTo>
    <relationshipLabel>Career Ready Checks</relationshipLabel>
    <relationshipName>Career_Ready_Checks</relationshipName>
    <type>Lookup</type>
</CustomField>