force-app/main/default/objects/Career_Ready_Check__c/fields/Apprenticeship_Leads_Interview__c.field-meta.xml
<CustomField>
    <fullName>Apprenticeship_Leads_Interview__c</fullName>
    <description>Created by: JA
Purpose: Track how the Apprenticeship Lead feels about their candidate</description>
    <label>Apprenticeship Lead&apos;s Interview</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not a Good Fit</fullName>
            </value>
            <value>
                <fullName>Unsure Fit</fullName>
            </value>
            <value>
                <fullName>Good Fit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>