force-app/main/default/objects/Career_Ready_Check__c/fields/Apprenticeship_Leads_Interview_Notes__c.field-meta.xml
<CustomField>
    <fullName>Apprenticeship_Leads_Interview_Notes__c</fullName>
    <description>Created by: JA
Purpose: Track any notes from the Apprenticeship Lead&apos;s interview</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Apprenticeship Lead&apos;s Interview Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>