force-app/main/default/objects/Career_Ready_Check__c/fields/Communication__c.field-meta.xml
<CustomField>
    <fullName>Communication__c</fullName>
    <description>Created by BN
For Geekwise Users
To track Cohortian readiness</description>
    <inlineHelpText>Responds to mtg reqs, leads, team members
Engages in productive conversations 
Encourages others &amp; other’s ideas in conversations
Willing to ask for help
Clearly comms orally and in writing.
Active listener
Appropriate body lang/facial expressions</inlineHelpText>
    <label>Communication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Career_Ready_Scoring</valueSetName>
    </valueSet>
</CustomField>