force-app/main/default/objects/Career_Ready_Check__c/fields/Communication_Notes__c.field-meta.xml
<CustomField>
    <fullName>Communication_Notes__c</fullName>
    <description>Created by BN
For Geekwise Users
To track Cohortian readiness</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Communication Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>