force-app/main/default/objects/Career_Ready_Check__c/fields/Community_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Community_Engagement__c</fullName>
    <description>Created by BN
For Geekwise Users
To track Cohortian career readiness</description>
    <inlineHelpText>Attendance and presence in GKW community
Attends events
Involved in team activities
Active on Slack
Brings friends and family into the community/events</inlineHelpText>
    <label>Community Engagement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Career_Ready_Scoring</valueSetName>
    </valueSet>
</CustomField>