force-app/main/default/objects/Career_Ready_Check__c/fields/Contributing_to_the_Success_of_Others__c.field-meta.xml
<CustomField>
    <fullName>Contributing_to_the_Success_of_Others__c</fullName>
    <description>Created by BN
For Geekwise Users
To track Cohortian career readiness</description>
    <inlineHelpText>Willing to help others and support their success
Shows up to support their team
Participates and contributes to discussions
Reaches out to help others on Slack
Willingness to help others through words and actions
Tutors others</inlineHelpText>
    <label>Contributing to the Success of Others</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Career_Ready_Scoring</valueSetName>
    </valueSet>
</CustomField>