force-app/main/default/objects/Career_Ready_Check__c/fields/Culture__c.field-meta.xml
<CustomField>
    <fullName>Culture__c</fullName>
    <description>Created by BN
For Geekwise Users
To track Cohortian career readiness</description>
    <inlineHelpText>Integrity
Self-respect
Values
Respected by peers</inlineHelpText>
    <label>Culture</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Career_Ready_Scoring</valueSetName>
    </valueSet>
</CustomField>