force-app/main/default/objects/Career_Ready_Check__c/fields/Grit__c.field-meta.xml
<CustomField>
    <fullName>Grit__c</fullName>
    <description>Created by BN
For Geekwise Users
To track Cohortian career readiness</description>
    <inlineHelpText>Overcoming circumstances
Perseverance
Strength of character
Works well under pressure</inlineHelpText>
    <label>Grit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Career_Ready_Scoring</valueSetName>
    </valueSet>
</CustomField>