force-app/main/default/objects/Career_Ready_Check__c/fields/Grit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Grit_Notes__c</fullName>
    <description>Created by BN
For Geekwise Users
To track Cohortian career readiness</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Grit Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>