force-app/main/default/objects/Career_Ready_Check__c/fields/Hiring_Status__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Status__c</fullName>
    <description>Created by BN
Geekwise Users
Track Cohortian career readiness</description>
    <label>Hiring Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Needs More Time</fullName>
            </value>
            <value>
                <fullName>Almost There</fullName>
            </value>
            <value>
                <fullName>Ready to Hire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>