force-app/main/default/objects/Career_Ready_Check__c/fields/Initiative__c.field-meta.xml
<CustomField>
    <fullName>Initiative__c</fullName>
    <description>Created by BN
For Geekwise Users
To track Cohortian career readiness</description>
    <inlineHelpText>Volunteers at events
Ready to work
Prepared
Respects people’s time
Highly motivated/excited to work
Risk-taker
Up for a challenge</inlineHelpText>
    <label>Initiative</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Career_Ready_Scoring</valueSetName>
    </valueSet>
</CustomField>