force-app/main/default/objects/Career_Ready_Check__c/fields/Interview_Prep__c.field-meta.xml
<CustomField>
    <fullName>Interview_Prep__c</fullName>
    <description>Created by BN
Geekwise Users
Track Cohortian career readiness</description>
    <inlineHelpText>Attends career workshops, check-ins with leads mock interviews
Regularly Updates: portfolio, cover letter, resume, employment status tracking</inlineHelpText>
    <label>Interview Prep</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Career_Ready_Scoring</valueSetName>
    </valueSet>
</CustomField>