force-app/main/default/objects/Career_Ready_Check__c/fields/Interview_Prep_Notes__c.field-meta.xml
<CustomField>
    <fullName>Interview_Prep_Notes__c</fullName>
    <description>Created by BN
Geekwise Users
Track Cohortian career readiness</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Interview Prep Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>