force-app/main/default/objects/Career_Ready_Check__c/fields/Marketing__c.field-meta.xml
<CustomField>
    <fullName>Marketing__c</fullName>
    <description>Created by BN
Geekwise Users
Track Cohortian career readiness</description>
    <inlineHelpText>Publicly show support of their program, cohort team, GKW/BW, self-brand, and evangelize their work</inlineHelpText>
    <label>Marketing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Career_Ready_Scoring</valueSetName>
    </valueSet>
</CustomField>