force-app/main/default/objects/Career_Ready_Check__c/fields/Productivity__c.field-meta.xml
<CustomField>
    <fullName>Productivity__c</fullName>
    <description>Created by BN
For Geekwise Users
To track Cohortian career readiness</description>
    <inlineHelpText>Has a portfolio of work projects that can be shared
Portfolio projects show industry-standard workflow and efficiency
Has led organized discussions on topics relevant to cohort focus
Meets deadlines
Manages time well</inlineHelpText>
    <label>Productivity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Career_Ready_Scoring</valueSetName>
    </valueSet>
</CustomField>