force-app/main/default/objects/Career_Ready_Check__c/fields/Sales__c.field-meta.xml
<CustomField>
    <fullName>Sales__c</fullName>
    <description>Created by BN
For Geekwise Users
To track Cohortian career readiness</description>
    <inlineHelpText>The personality of someone who could connect with potential clients
Recruiting their network to workshops
Recruit attendees to events
Charismatic</inlineHelpText>
    <label>Sales</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Career_Ready_Scoring</valueSetName>
    </valueSet>
</CustomField>