force-app/main/default/objects/Career_Ready_Check__c/fields/Skill_Readiness__c.field-meta.xml
<CustomField>
    <fullName>Skill_Readiness__c</fullName>
    <description>Created by BN
For Geekwise Users
To track Cohortian career readiness</description>
    <inlineHelpText>Exams, certifications earned, or taken
Making progress towards a new skill set Consistently completes assignments</inlineHelpText>
    <label>Skill Readiness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Career_Ready_Scoring</valueSetName>
    </valueSet>
</CustomField>