force-app/main/default/objects/Career_Ready_Check__c/fields/Soft_Skills__c.field-meta.xml
<CustomField>
    <fullName>Soft_Skills__c</fullName>
    <description>Created by BN
For Geekwise Users
To track Cohortian career readiness</description>
    <inlineHelpText>Able to interact effectively and harmoniously with the GKW community
Communicates clearly in writing
Willing to collaborate with team
Cultural awareness of others</inlineHelpText>
    <label>Soft Skills</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Career_Ready_Scoring</valueSetName>
    </valueSet>
</CustomField>