force-app/main/default/objects/Career_Ready_Check__c/fields/Teachable__c.field-meta.xml
<CustomField>
    <fullName>Teachable__c</fullName>
    <description>Created by BN
For Geekwise Users
To track Cohortian career readiness</description>
    <inlineHelpText>Takes guidance and correction
Asks questions on improvement 
Takes constructive criticism to make improvements
Apt and willing to learn</inlineHelpText>
    <label>Teachable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Career_Ready_Scoring</valueSetName>
    </valueSet>
</CustomField>