force-app/main/default/objects/Career_Ready_Check__c/fields/Team_Contributor__c.field-meta.xml
<CustomField>
    <fullName>Team_Contributor__c</fullName>
    <description>Created by BN
For Geekwise Users
To track Cohortian career readiness</description>
    <inlineHelpText>Takes the initiative to support their team members
Supports another team member when done with their tasks
Continues to further learning for the project at hand
Supports morale of team members</inlineHelpText>
    <label>Team Contributor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Career_Ready_Scoring</valueSetName>
    </valueSet>
</CustomField>