force-app/main/default/objects/Career_Ready_Check__c/fields/Technical_Skills__c.field-meta.xml
<CustomField>
    <fullName>Technical_Skills__c</fullName>
    <description>Created by BN
For Geekwise Users
To track Cohortian career readiness</description>
    <inlineHelpText>Has shown the ability to produce cohort curriculum
Understands framework concepts and syntax as well as the context in which to use each concept
Shows an ability to utilize technical tools that are relevant to industry standards</inlineHelpText>
    <label>Technical Skills</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Career_Ready_Scoring</valueSetName>
    </valueSet>
</CustomField>