force-app/main/default/objects/Career_Ready_Check__c/listViews/Career_Ready_Checks_All.listView-meta.xml
<ListView>
    <fullName>Career_Ready_Checks_All</fullName>
    <columns>NAME</columns>
    <columns>Apprentice__c</columns>
    <columns>Apprenticeship__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Career Ready Checks - All</label>
    <sharedTo>
        <group>BW_Executive_Team</group>
        <group>Tech_Support_Team</group>
        <group>VP_Team</group>
        <role>System_Administrator</role>
    </sharedTo>
</ListView>