force-app/main/default/objects/Career_Ready_Check__c/listViews/My_Career_Ready_Checks_All.listView-meta.xml
<ListView>
    <fullName>My_Career_Ready_Checks_All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Career Ready Checks - All</label>
</ListView>